# Console-Messenger

./: CMakeLists.txt  LICENSE  README.md
src/: chat_client.cpp  chat_server.cpp
